--- a/CSS/style.css
+++ b/CSS/style.css
@@ -8,7 +8,7 @@ body{
 }
 
 .owl-container{
-    max-width: 900;
+    max-width:auto;
     margin: auto;
     
     
@@ -18,6 +18,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-top: 35%;
+    margin-left: 5%;
+    margin-right: 5%;
     
     
     
