--- a/LoginPage/CSS/LoginCss.css
+++ b/LoginPage/CSS/LoginCss.css
@@ -6,3 +6,15 @@ body {
     max-width: 100%;
     
 }
+
+.row{
+    position: absolute;
+    width: 678px;
+    height: 648px;
+    left: 429px;
+    top: 108px;
+    margin-top: 108px;
+    margin-left: 429px;
+    margin-right: 429px;
+    margin-bottom: 108px;
+}
