--- a/LoginPage/CSS/LoginCss.css
+++ b/LoginPage/CSS/LoginCss.css
@@ -6,7 +6,7 @@
 }
 
 body{
-    background-image: url(../Img/Background.jpg);
+    background-image: url(../Img/Bacground-min.png);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: cover;
