--- a/AdminLogin/css/style.css
+++ b/AdminLogin/css/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
+
 * {
     margin: 0px;
     padding: 0px;
@@ -15,22 +17,115 @@ body{
     
 }
 
-.square{
-    position: absolute;
-    margin-top: 108px;
-    margin-bottom: 55px ;
-    margin-left: 690px;
-    margin-right: 690px;
+.background {
+    background: rgba(251, 251, 251, 0.8);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+    padding: 60px 90px 60px 90px;
+    max-width: 600px;
+    display: center;
+} 
+
+.center {
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.flex {
+    text-align: center;
+}
+
+.custom-logo {
+    text-align: center;
+    margin-top: 90px;
+    margin-bottom: 60px;
+}
+
+custom-header {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 31px;
+    line-height: 37px;
+    text-align: center;
+
+    color: #000000;
+}
+
+.caption {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    text-align: center;
+
+    color: rgba(0, 0, 0, 0.5);
+    margin-top: -9px;
+}
+
+input[type=text] {
+    border: none;
+    border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+    border-radius: 0px;
+    background-color: transparent;
+
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    
+    color: rgba(0, 0, 0, 0.5);
+}
+
+.btn-custom {
+    background: #C29283;
+    box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+    border: none;
+    border-radius: 8px;
+
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 24px;
+    /* identical to box height */
+
+    text-align: center;
+
+    color: #FFFFFF;
+    width: 100%;
+    padding-top:18px;
+    padding-bottom: 18px;
 
 }
-.rectangle{
-    position: absolute;
-    height: 518px;
-    width: 678px;
-    background-color: rgba(251, 251, 251, 0.8);
-    margin-top: 238px;
-    margin-left: 429px;
-    margin-right:429px;
-    margin-bottom: 108px;
-    border-radius: 8px;
+
+.caption-2 {
+    display: flex;
+    justify-content: center;
+}
+
+.reset-pw {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+
+    text-align: center;
+    text-decoration-line: underline;
+
+    color: rgba(21, 48, 68, 0.8);
+    margin-top: 5px;
+    margin-left: 5px;
+}
+
+.para {
+    font-family: 'Lato';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 15px;
+    /* identical to box height */
+
+    text-align: center;
+    margin-top: 5px;
+    color: rgba(0, 0, 0, 0.5);
 }
