--- a/StaffLogin/css/stflog.css
+++ b/StaffLogin/css/stflog.css
@@ -1,36 +1,190 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: content-box;
-    font-family: lato, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: content-box;
+  font-family: lato, sans-serif;
 }
 
-body{
-    background-image: url(../Img/Background.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    
-    
+body {
+  background-image: url(../Img/Background.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
 
-.square{
-    position: absolute;
-    margin-top: 108px;
-    margin-bottom: 55px ;
-    margin-left: 690px;
-    margin-right: 690px;
-
+.background {
+  background: rgba(251, 251, 251, 0.8);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 8px;
+  padding: 60px 90px 60px 90px;
+  max-width: 600px;
+  display: center;
 }
-.rectangle{
-    position: absolute;
-    height: 518px;
-    width: 678px;
-    background-color: rgba(251, 251, 251, 0.8);
-    margin-top: 238px;
-    margin-left: 429px;
-    margin-right:429px;
-    margin-bottom: 108px;
-    border-radius: 8px;
+
+.center {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 60px;
+}
+
+.flex {
+  text-align: center;
+}
+
+.custom-logo {
+  text-align: center;
+  margin-top: 90px;
+  margin-bottom: 60px;
+}
+
+.custom-header {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 31px;
+  line-height: 37px;
+  text-align: center;
+
+  color: #000000;
+}
+
+.caption {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14px;
+  text-align: center;
+
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: -9px;
+}
+
+input[type="text"] {
+  border: none;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-radius: 0px;
+  background-color: transparent;
+
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+
+  color: rgba(0, 0, 0, 0.5);
+  transition: 0.5s;
+}
+
+input[type="text"]:focus {
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  background-color: rgba(251, 251, 251, 0.9);
+  border-radius: 4px;
+}
+
+.btn-custom {
+  background: #c29283;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border: none;
+  border-radius: 8px;
+
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: #ffffff;
+  width: 100%;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  transition: 0.2s;
+}
+
+.btn-custom:hover {
+  transform: scale(1.005);
+  background: #c48b7a;
+}
+
+.caption-2 {
+  margin-top: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.reset-pw {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+
+  text-align: center;
+  text-decoration-line: underline;
+
+  color: rgba(21, 48, 68, 0.8);
+
+  margin-left: 5px;
+}
+
+.para {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  /* identical to box height */
+
+  text-align: center;
+
+  color: rgba(0, 0, 0, 0.5);
+}
+
+@media only screen and (max-width: 768px) {
+  .background {
+    padding: 60px 45px 60px 45px;
+    margin-left: 45px;
+    margin-right: 45px;
+  }
+}
+
+@media only screen and (max-width: 568px) {
+  .custom-header {
+    font-size: 25px;
+  }
+
+  .caption {
+    font-size: 14px;
+    margin-top: -9px;
+  }
+}
+
+@media only screen and (max-width: 448px) {
+  .custom-header {
+    font-size: 20px;
+  }
+
+  .caption {
+    font-size: 9px;
+    margin-top: -9px;
+  }
+
+  input[type="text"] {
+    font-size: 15px;
+  }
+
+  .btn-custom {
+    font-size: 15px;
+  }
+
+  .para {
+    font-size: 9px;
+  }
+
+  .reset-pw {
+    font-size: 9px;
+  }
 }
