--- a/Client-reg/css/CR.css
+++ b/Client-reg/css/CR.css
@@ -45,3 +45,58 @@ img{
     margin: auto;
     display: flex;
 }
+
+.inner .img-holder{
+    width: 50%;
+}
+.inner form{
+    width: 50%;
+    padding-top: 36px;
+    padding-left: 45px;
+    padding-right: 45px;
+
+}
+
+.inner h3{
+    font-size: 31px;
+    text-align: left;
+    margin-bottom: 29px;
+}
+.form-group{
+    display: flex;
+}
+
+.form-wrapper{
+    position: relative;
+}
+.form-control{
+    border: 1px solid #333;
+    border: none;
+    border-bottom: 1px solid #333;
+    display: block;
+    width: 100%;
+    height: 30px;
+    padding-right: 0;
+    margin-bottom: 25px;
+}
+
+select{
+    cursor: pointer;
+    padding-left: 20px;
+}
+
+button{
+    border: none;
+    width: 164px;
+    height: 51px;
+    margin: auto;
+    margin-top: 45px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 0;
+    background: rgba(21, 48, 68, 1);
+    font-size: 15px;
+    color: #fff;
+}
