--- a/StaffLogin/css/stflog.css
+++ b/StaffLogin/css/stflog.css
@@ -8,7 +8,7 @@
 }
 
 body {
-  background-image: url(../Img/Background.jpg);
+  background-image: url(../Img/Bacground.png);
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: cover;
