--- a/Client-reg/css/CR.css
+++ b/Client-reg/css/CR.css
@@ -1,132 +1,128 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
 * {
-    box-sizing: border-box;
-    margin: 0px;
-    padding: 0px;
-    box-sizing: content-box;
-    font-family: "lato", sans-serif;
+  box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
+  font-family: "lato", sans-serif;
 }
 
-body{
-    background-image: url(../img/alexander-nrjwolf-X0Osf55s5yk-unsplash.jpg);
-    background-size: cover;
-    margin: 0;
+.flex-container {
+  display: flex;
+  align-items: stretch;
 }
 
-.logoo{
-    width: 156px;
-    height: 74px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 99px;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 69px;
+.hero-section {
+  height: 100vh;
+  width: auto;
 }
 
-input, select, button{
-    font-family: lato;
-    color: #333;
-    font-size: 14px;
+.main-image {
+  height: 100%;
+  width: auto;
 }
 
-h3,h4{
-    margin: 0;
+.parent-class {
+  background-color: rgba(251, 251, 251, 0.8);
+  padding-top: 60px;
+  height: 100%;
 }
 
-img{
-    max-width: 100%;
-}
-:focus{
-    outline: none; 
+.right-side {
+  text-align: center;
 }
 
-.wrapper{
-    min-height: 100vh;
-    background-size: cover;
-    background-repeat: no-repeat;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-.inner{
-    padding: 0;
-    background: #fff;
-    max-width: 100%;
-    max-height: 65%;
-    margin: auto;
-    display: flex;
+input[type="email"],
+input[type="password"],
+input[type="text"],
+input[type="submit"] {
+  display: block;
+  width: 30vw;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.inner .img-holder{
-    width: 65%;
-}
-.inner form{
-    width: 35%;
-    padding-top: 36px;
-    padding-left: 45px;
-    padding-right: 45px;
+input[type="email"],
+input[type="password"],
+input[type="text"] {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  padding: 3px;
+  color: rgba(0, 0, 0, 0.5);
 
-}
-
-.inner h3{
-    font-size: 31px;
-    text-align: left;
-    margin-bottom: 29px;
-}
-.form-group{
-    display: flex;
+  border-top: 0px;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  border-left: 0px;
+  border-right: 0px;
+  background-color: transparent;
+  margin-bottom: 30px;
 }
 
-.form-wrapper{
-    position: relative;
-}
-.form-control{
-    border: 1px solid #333;
-    border: none;
-    border-bottom: 1px solid #333;
-    display: block;
-    width: 100%;
-    height: 30px;
-    padding-right: 0;
-    margin-bottom: 25px;
+input[type="email"]:focus,
+input[type="password"]:focus,
+input[type="text"]:focus {
+  border-top: 0px;
+  border-left: 0px;
+  border-right: 0px;
+  border-bottom: 3px solid rgba(0, 0, 0, 0.5);
+  outline: 0px;
 }
 
-select{
-    cursor: pointer;
-    padding-left: 20px;
+input[type="submit"] {
+  background: #153044;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  border: 0px;
+  padding: 15px;
+
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+
+  color: rgba(255, 255, 255, 0.8);
+  transition: 0.2s;
 }
 
-button{
-    border: none;
-    width: 354px;
-    height: 51px;
-    margin: auto;
-    margin-top: 45px;
-    cursor: pointer;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding-left: 0;
-    background: rgba(21, 48, 68, 1);
-    font-size: 15px;
-    color: #fff;
+input[type="submit"]:hover {
+  transform: scale(1.005);
 }
-button:hover{
-    background: black;
-}
-@media ( max-width:767px ){
-    .inner{
-        display: block;
-    }
-    .inner .image-holder{
-        width: 100%;
-        padding: 40px 0 30px;
-    }
-    button{
-        margin-top: 60px;
 
-    }
+.user-logo {
+  height: 90px;
+  width: auto;
+}
+
+.header {
+  display: inline-block;
+  width: 30vw;
+  text-align: left;
+  margin-top: 30px;
+  margin-bottom: 15px;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+
+  color: #000000;
+}
+
+.form {
+  width: auto;
+}
+
+.link-text {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  color: rgba(0, 0, 0, 0.5);
+  margin-top: 6px;
+}
+
+.link {
+  text-decoration-line: underline;
+  color: rgba(21, 48, 68, 0.8);
 }
