--- a/bookaFlight/CSS/style.css
+++ b/bookaFlight/CSS/style.css
@@ -1,77 +1,129 @@
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 * {
-    margin: 0px;
-    padding: 0px;
-    box-sizing: content-box;
-    font-family: lato, sans-serif;
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+  font-family: lato, sans-serif;
 }
 
-body{
-    background-image: url(../Img/Background3-min.jpg);
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    background-size: cover;
-    background-position: center;
-    
-}
-
-/*Nav*/
-
-.hidden {
-    display: none;
+body {
+  padding: 0px;
+  margin: 0px;
+  background-image: url(../Img/Background3-min.jpg);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-position: center;
 }
 
 .nav1 {
-    margin-top: 46px;
-    margin-bottom: 50px;
-    margin-left: 75px;
-    margin-right: 157px;
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-/*Form Box*/
-.headtitile{
-    width: 1108px;
-    height: 52px;
-    margin-left: 51px;
-    margin-right: 51px;
-    margin-top: 39px;
-    border-bottom: 2px;
+.nav-link {
+  padding: 15px !important;
+
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+
+  color: rgba(255, 255, 255, 0.8);
+  text-align: center;
+  border-bottom: 1px solid rgba(255, 255, 255, 0);
+  transition: 0.2s;
 }
 
-.booking-form-box{
-    max-width: 1210px;
-    max-height: 306px;
-    border: 1px solid #ced4da;
-    margin: 10% auto 0; 
-    background: #FBFBFB;
-    border-radius: 8px;
-    box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.15);
+.nav-link:hover {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
 
-.booking-form{
-    padding: 0 40px 40px;
-    box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.15);
-}
-.booking-form label{
-    margin-bottom: 5px;
-    margin-top: 10px;
-    font-size: 12px;
-    color: rgb(0, 0, 0);
+.active {
+  border-bottom: 1px solid rgba(255, 255, 255, 0.8);
 }
 
-input::placeholder{
-    color: #fff !important;
-    
+.container {
+  margin-top: 100px;
+  background: #fbfbfb;
+  box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.15);
+  border-radius: 8px;
+
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+
+  padding: 30px 60px;
 }
 
-.input-grp{
-    width: 150px;
-    display: inline-block;
+.header h4 {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 20px;
+
+  color: #153044;
+  border-bottom: 2px solid rgba(0, 0, 0, 0.3);
+  padding-bottom: 30px;
 }
 
-.form-control{
-    font-size: 12px !important;
-    border-radius: 4px !important;
-    color: #fff !important;
-    box-shadow: 0px 4px 4px rgba(255, 255, 255, 0.15) !important;
+.from-to {
+  border: 1px solid rgba(92, 111, 122, 0.4);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.05);
+  border-radius: 4px;
 }
 
+.from-parent {
+  padding: 9px 15px;
+  border-right: 1px solid rgba(92, 111, 122, 0.4);
+}
+
+.caption {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 10px;
+
+  color: rgba(0, 0, 0, 0.8);
+  margin-bottom: 3px;
+}
+
+.from-input {
+  border: none;
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 600;
+  font-size: 18px;
+  background-color: transparent;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.from-input:focus {
+  outline: none;
+}
+
+.flex-center-hr {
+  display: flex;
+  align-items: center;
+}
+
+.to {
+  font-family: "Lato";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 15px;
+  margin-bottom: 0px;
+  margin-right: 45px;
+  color: rgba(0, 0, 0, 0.8);
+}
+
+.to-parent {
+  padding-left: 30px;
+  padding-right: 30px;
+}
+
+.date input[type="text"],
+.date input[type="date"] {
+}
